<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BomberTruckAndroid</string>
    <string name="title_string">Welcome To Bomber Truck</string>
    <string name="action_settings">Settings</string>
    <string name="up_button">Up</string>
    <string name="down_button">Down</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="bomb_button">Bomb</string>

</resources>
