<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bombertruckandroid.MainActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string" />
    
    <com.example.bombertruckandroid.GameView
        android:id="@+id/gameViewGameWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_above="@+id/buttonUp"/>

     <Button
        android:id="@+id/buttonUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_alignLeft="@+id/gameViewGameWindow"
        android:layout_marginLeft="55dp"
        android:text="@string/up_button" />
    
    <Button
        android:id="@+id/buttonLeft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/gameViewGameWindow"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/left_button" />

    <Button
        android:id="@+id/buttonRight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/buttonLeft"
        android:layout_alignLeft="@+id/buttonUp"
        android:layout_marginLeft="60dp"
        android:text="@string/right_button" />

	<Button
        android:id="@+id/buttonDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/gameViewGameWindow"
        android:layout_marginLeft="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/down_button" />

    <Button
        android:id="@+id/buttonBomb"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonRight"
        android:layout_marginLeft="90dp"
        android:layout_alignTop="@+id/buttonLeft"
        android:text="@string/bomb_button" />

    

</RelativeLayout>